# 5511-a4-brain-surgery

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPER_GUDIE.md  README.md  WORK_DISTRIBUTION.md  pyproject.toml  pyrightconfig.json  readme_miguel.md  test1.txt  test3.txt  verify_pilot.txt
.github/: labeler.yaml  pull_request_template.md
.github/workflows/: ci.yaml  labeler.yaml
data/corpus/: curated_soccer_prompts_1100.ndjson  soccer_prompts.ndjson  soccer_prompts.txt
docs/: Q1_model_and_hooks.md  Q1_to_Q6.md  Q2_data_collection_and_storage.md  Q3_sae_training.md  Q4_feature_interpretation.md  Q5_feature_labeling_bonus.md  Q6_intervention_and_counterfactuals.md  THEORY.md  final_report_run_20260404_0853.md  final_report_run_20260404_1048.md
results/experiments/run_20260403_2221/logs/tensorboard/: events.out.tfevents.1775265670.zorin-awbk.346632.0
results/experiments/run_20260403_2222/logs/tensorboard/: events.out.tfevents.1775265726.zorin-awbk.347315.0
results/experiments/run_20260403_2223/logs/tensorboard/: events.out.tfevents.1775265791.zorin-awbk.348195.0
results/experiments/run_20260403_2226/logs/tensorboard/: events.out.tfevents.1775266019.zorin-awbk.351046.0
results/experiments/run_20260403_2232/logs/tensorboard/: events.out.tfevents.1775266336.zorin-awbk.355625.0
results/experiments/run_20260403_2258/: cluster_report.json  intervention_results.csv  metadata.json
results/experiments/run_20260403_2258/logs/tensorboard/: events.out.tfevents.1775267907.zorin-awbk.377499.0
results/experiments/run_20260403_2322/: cluster_report.json  intervention_results.csv
results/experiments/run_20260403_2322/logs/tensorboard/: events.out.tfevents.1775269347.zorin-awbk.395149.0
results/features/run_20260403_2223/: top_10_features.csv
results/features/run_20260403_2232/: top_10_features.csv
results/features/run_20260403_2258/: top_10_features.csv
results/features/run_20260403_2322/: top_10_features.csv
results/metrics/: training_losses_run_20260403_2221.json  training_losses_run_20260403_2222.json  training_losses_run_20260403_2223.json  training_losses_run_20260403_2226.json  training_losses_run_20260403_2232.json  training_losses_run_20260403_2258.json  training_losses_run_20260403_2322.json
results/metrics/run_20260403_2232/: dbscan_summary.json
results/terminal_outputs/: test2.txt
scripts/: generate_report.py  golden_run.py  local_l1_test.py  train_university.py  verify_pilot.py  verify_pilot_experiment.py
src/: interpret.py  intervention.py  main.py
src/brain_surgery/: __init__.py  clustering.py  data_gen.py  interpret.py  intervention.py  main.py  model_wrapper.py  pilot_pipeline.py  sae.py  trainer.py  utils.py
tests/: conftest.py  test_activation_capture.py  test_clustering.py  test_data_gen.py  test_env.py  test_interpret.py  test_intervention.py  test_main.py  test_model_wrapper.py  test_sae.py  test_scripts_paths.py  test_trainer.py  test_utils.py
