[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a4-brain-surgery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "huggingface-hub>=1.8.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "ty>=0.0.26",
]

[tool.ruff]
src = ["src"]
extend-exclude = ["data", "results"]

[tool.ruff.lint]
# D = Docstrings, ANN = Type Annotations, UP = Upgrade (Modern Syntax)
select = ["D", "ANN", "UP", "E", "F"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["UP047"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
mypy_path = "src" # Point mypy to the directory containing your code
strict = true
plugins = ["pydantic.mypy"] # If you decide to use Pydantic
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# This specific line fixes the "No .py files found" error
files = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
