[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain_surgery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch==2.4.0+cu118",
    "transformers>=5.4.0",
    "wandb>=0.25.1",
]

[tool.ruff]
src = ["src"]
extend-exclude = ["data", "results"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[tool.ruff.lint]
# D = Docstrings, ANN = Type Annotations, UP = Upgrade (Modern Syntax)
select = ["D", "ANN", "UP", "E", "F"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["UP047"]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
mypy_path = "src" # Point mypy to the directory containing your code
strict = true
plugins = ["pydantic.mypy"] # If you decide to use Pydantic
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# This specific line fixes the "No .py files found" error
files = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["brain_surgery*"]

[tool.uv]
package = true

[tool.uv.sources]
brain-surgery = { path = ".", editable = true }

[tool.deptry]
known_first_party = ["brain_surgery"]

[tool.deptry.package_module_name_map]
"python-dotenv" = "dotenv"

[tool.deptry.per_rule_ignores]
DEP002 = ["tensorboard"]

[dependency-groups]
dev = [
    "accelerate>=1.10.0",
    "autoflake>=2.3.3",
    "deptry>=0.25.1",
    "huggingface-hub>=1.8.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "seaborn>=0.13.2",
    "ty>=0.0.29",
    "wandb>=0.25.1",
]
